# fake-news-detector

./: .gitignore  docker-compose.yml
dataset/: dataset_formal.json  dataset_kif.json
dataset/prepared/: dataset_formal_prepared.jsonl  dataset_kif_prepared.jsonl
fake-news-detector-api/: pom.xml
fake-news-detector-api/docker/: Dockerfile
fake-news-detector-ui/: docker-compose.dev.yml  index.html  package.json  pnpm-lock.yaml
fake-news-detector-ui/docker/: Caddyfile  Dockerfile
fake-news-detector-ui/src/: App.jsx  main.jsx
fake-news-detector-ui/src/components/: FactChecker.jsx  KBExplorer.jsx
fake-news-detector-ui/src/dal/: api.js
fake-news-detector-ui/src/test/: testData.js
gpt-translator/: .env  pyproject.toml
gpt-translator/docker/: Dockerfile
gpt-translator/src/: config.py  gpt_translator.py  main.py
gpt-translator/test/: test_translator.http
ontology-rest/: pom.xml
ontology-rest/docker/: api.dockerfile  sigmakee.dockerfile
ontology-rest/sigma/config/: Diet.kif  config.xml
ontology-rest/src/main/resources/: FactsMapping.jsonl  ManualMappings.jsonl  (+1 more)
tests/test_1/: in.json  out.json
tests/test_10/: in.json  out.json
tests/test_11/: in.json  out.json
tests/test_12/: in.json  out.json
tests/test_13/: in.json  out.json
tests/test_14/: in.json  out.json
tests/test_2/: in.json  out.json
tests/test_3/: in.json  out.json
tests/test_4/: in.json  out.json
tests/test_5/: in.json  out.json
tests/test_6/: in.json  out.json
tests/test_7/: in.json  out.json
tests/test_8/: in.json  out.json
tests/test_9/: in.json  out.json
(+58 files in other folders)
