[tool.poetry]
name = "gpt-translator"
version = "0.1.0"
description = ""
authors = ["Dan Lupu <dan.lupu.dl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
